Dibuat menggunakan Colab

--- a/NLP(UDEMY).ipynb
+++ b/NLP(UDEMY).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN21CUyeBXJ0p1s/d3OZ5GW",
+      "authorship_tag": "ABX9TyMSOJQW73lyPEG7iP/kq9xx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2325,7 +2325,7 @@
         "id": "m9T9z9wY5WCu",
         "outputId": "461cb5ce-50c9-47aa-e925-843e753d9a3e"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2636,7 +2636,7 @@
         "id": "M_g9KW345xcl",
         "outputId": "90e6649c-ca6f-4ab6-b96f-55e9c7410d92"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3027,7 +3027,7 @@
         "id": "A48KD5mo8bpq",
         "outputId": "6c9bc837-4e02-4425-a6ef-014cab778dc0"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3072,7 +3072,7 @@
         "id": "Toq3B_ySD5rK",
         "outputId": "ff3bfc4a-ba87-482a-e31f-d5b5c8e552c9"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3104,7 +3104,7 @@
         "id": "XmQ8Q_YcEODH",
         "outputId": "0127292f-e4b0-47f3-98a1-a933c2007f1b"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3136,7 +3136,7 @@
         "id": "AIdbPOsbEU0O",
         "outputId": "f03fffeb-6e36-4bcd-ac06-f72f256ae17d"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3175,7 +3175,7 @@
         "id": "zLjpcnbELP5n",
         "outputId": "d7145cea-1430-473f-8b4b-69714517ea09"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3221,7 +3221,7 @@
         "id": "0VNoSllbLoOf",
         "outputId": "5ab29c1f-b56f-4b2a-a437-9151b6baa75c"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3605,6 +3605,213 @@
           "execution_count": 13
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Cosine Similiarty"
+      ],
+      "metadata": {
+        "id": "EBhnG23Qc684"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+        "from sklearn.metrics.pairwise import cosine_similarity\n",
+        "import numpy as np\n",
+        "\n",
+        "pertanyaan = [\n",
+        "    'Apa itu Natural Language Processing?',\n",
+        "    'Bagaimana cara kerja Machine Learning?',\n",
+        "    'Apa bedanya supervised dan unsupervised learning?',\n",
+        "    'Apa itu chatbot?',\n",
+        "    'Bagaimana cara kerja chatbot?',\n",
+        "    'Apa itu AI?'\n",
+        "]\n",
+        "\n",
+        "jawaban = [\n",
+        "    'Natural Language Processing adalah cabang AI yg menangani pemrosesan bhs manusia',\n",
+        "    'Machine Learning bekerja dengan melatih model menggunakan data untuk membuat prediksi',\n",
+        "    'Supervised learning menggunakan label data, sedangkan unsupervised learning tidak',\n",
+        "    'Chatbot adalah progam komputer yg dirancangn berinteraksi dengan manusia',\n",
+        "    'AI adalah bidang yg menciptakan mesin cerdas'\n",
+        "]\n",
+        "\n",
+        "# Preprocessing TF-IDF\n",
+        "vectorizer = TfidfVectorizer()\n",
+        "\n",
+        "# Mentransformasikan pertnyaan menjadi vekctor TF-IDF\n",
+        "tfidf_matrix = vectorizer.fit_transform(pertanyaan)\n",
+        "\n",
+        "# Fungsi untuk Chatbot menggunakan Cosine Similarity\n",
+        "def chatbot_response(input_user):\n",
+        "    # Mentransformasi input pengguna menjadi vektor TF-IDF\n",
+        "    input_tfidf = vectorizer.transform([input_user])\n",
+        "\n",
+        "    # Menghitung kesamaan cosine antara input dan pertanyaan yg ada\n",
+        "    similarity_scores = cosine_similarity(input_tfidf, tfidf_matrix)\n",
+        "\n",
+        "    # Mendapatkan indeks pertanyaan yang paling mirip\n",
+        "    index_most_similar = np.argmax(similarity_scores)\n",
+        "\n",
+        "    # Mengembalikan jawaban yg sesuai\n",
+        "    return jawaban[index_most_similar]\n",
+        "\n",
+        "# Simulasi Chatbot\n",
+        "while True:\n",
+        "  input_user = input('User:')\n",
+        "\n",
+        "  if input_user.lower() == 'exit':\n",
+        "      print('Chatbot: Terimakasih dan Sampai Jumpa')\n",
+        "      break\n",
+        "\n",
+        "  response = chatbot_response(input_user)\n",
+        "  print('Chatbot:', response)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 332
+        },
+        "id": "hCXvAczVdD1S",
+        "outputId": "e30978a4-c99b-49d3-c4b7-c2d09256c432"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "User:AI\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "IndexError",
+          "evalue": "list index out of range",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-e70df5e24f6f>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     48\u001b[0m       \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     49\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 50\u001b[0;31m   \u001b[0mresponse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mchatbot_response\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_user\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     51\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Chatbot:'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-1-e70df5e24f6f>\u001b[0m in \u001b[0;36mchatbot_response\u001b[0;34m(input_user)\u001b[0m\n\u001b[1;32m     38\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m     \u001b[0;31m# Mengembalikan jawaban yg sesuai\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 40\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mjawaban\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex_most_similar\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     41\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[0;31m# Simulasi Chatbot\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+          ]
+        }
+      ]
+    },
+    {
+      "source": [
+        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+        "from sklearn.metrics.pairwise import cosine_similarity\n",
+        "import numpy as np\n",
+        "\n",
+        "pertanyaan = [\n",
+        "    'Apa itu Natural Language Processing?',\n",
+        "    'Bagaimana cara kerja Machine Learning?',\n",
+        "    'Apa bedanya supervised dan unsupervised learning?',\n",
+        "    'Apa itu chatbot?',\n",
+        "    'Bagaimana cara kerja chatbot?',\n",
+        "    'Apa itu AI?' # This is the 6th question, index 5\n",
+        "]\n",
+        "\n",
+        "jawaban = [\n",
+        "    'Natural Language Processing adalah cabang AI yg menangani pemrosesan bhs manusia', # Answer for index 0\n",
+        "    'Machine Learning bekerja dengan melatih model menggunakan data untuk membuat prediksi', # Answer for index 1\n",
+        "    'Supervised learning menggunakan label data, sedangkan unsupervised learning tidak', # Answer for index 2\n",
+        "    'Chatbot adalah progam komputer yg dirancangn berinteraksi dengan manusia', # Answer for index 3\n",
+        "    'AI adalah bidang yg menciptakan mesin cerdas', # Answer for index 4\n",
+        "    'AI atau Kecerdasan Buatan adalah bidang ilmu komputer yang berfokus pada pembuatan mesin yang dapat berpikir dan belajar seperti manusia.' # Added answer for index 5\n",
+        "]\n",
+        "\n",
+        "# Preprocessing TF-IDF\n",
+        "vectorizer = TfidfVectorizer()\n",
+        "\n",
+        "# Mentransformasikan pertnyaan menjadi vekctor TF-IDF\n",
+        "tfidf_matrix = vectorizer.fit_transform(pertanyaan)\n",
+        "\n",
+        "# Fungsi untuk Chatbot menggunakan Cosine Similarity\n",
+        "def chatbot_response(input_user):\n",
+        "    # Mentransformasi input pengguna menjadi vektor TF-IDF\n",
+        "    input_tfidf = vectorizer.transform([input_user])\n",
+        "\n",
+        "    # Menghitung kesamaan cosine antara input dan pertanyaan yg ada\n",
+        "    similarity_scores = cosine_similarity(input_tfidf, tfidf_matrix)\n",
+        "\n",
+        "    # Mendapatkan indeks pertanyaan yang paling mirip\n",
+        "    index_most_similar = np.argmax(similarity_scores)\n",
+        "\n",
+        "    # Mengembalikan jawaban yg sesuai\n",
+        "    return jawaban[index_most_similar]\n",
+        "\n",
+        "# Simulasi Chatbot\n",
+        "while True:\n",
+        "  input_user = input('User:')\n",
+        "\n",
+        "  if input_user.lower() == 'exit':\n",
+        "      print('Chatbot: Terimakasih dan Sampai Jumpa')\n",
+        "      break\n",
+        "\n",
+        "  response = chatbot_response(input_user)\n",
+        "  print('Chatbot:', response)"
+      ],
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 428
+        },
+        "id": "paMyEkbah14Q",
+        "outputId": "c92a1ae0-05a4-4fb6-ceaf-0726683328ab"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "User:AI\n",
+            "Chatbot: AI atau Kecerdasan Buatan adalah bidang ilmu komputer yang berfokus pada pembuatan mesin yang dapat berpikir dan belajar seperti manusia.\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "Interrupted by user",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-16573266a0b5>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[0;31m# Simulasi Chatbot\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 45\u001b[0;31m   \u001b[0minput_user\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'User:'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     46\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0minput_user\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'exit'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m   1175\u001b[0m                 \u001b[0;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1176\u001b[0m             )\n\u001b[0;32m-> 1177\u001b[0;31m         return self._input_request(\n\u001b[0m\u001b[1;32m   1178\u001b[0m             \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprompt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1179\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"shell\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m   1217\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1218\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1219\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Interrupted by user\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1220\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1221\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid Message:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+        "from sklearn.metrics.pairwise import cosine_similarity\n",
+        "import numpy as np\n",
+        "\n",
+        "\n",
+        "pertanyaan = [\n",
+        "    'Apa itu Natural Language Processing?',\n",
+        "    'Bagaimana cara kerja Machine Learning?',\n",
+        "    'Apa bedanya supervised dan unsupervised learning?',\n",
+        "    'Apa itu chatbot?',\n",
+        "    'Bagaimana cara kerja chatbot?',\n",
+        "    'Apa itu AI?' # This is the 6th question, index 5\n",
+        "]\n"
+      ],
+      "metadata": {
+        "id": "MgJlW6wNgb-t"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
